# rayserve-ad-scoring

./: .gitignore  README.md  generate_resume.py  pyproject.toml
app/: generation.py  ingestion.py  main.py  retrieval.py  tracing.py
app/static/: index.html
data/corpus/: analytics_deep_dives.txt  competition_histories.txt  football_languages.txt  football_wisdom.txt  manager_philosophies.txt  tactical_glossary.txt  world_cup_complete_history.txt
rayserve-ad-scoring/: Dockerfile  README.md  railway.toml  requirements.txt
rayserve-ad-scoring/app/: main.py
rayserve-ad-scoring/app/features/: feature_builder.py
rayserve-ad-scoring/app/middleware/: metrics.py
rayserve-ad-scoring/app/models/: ensemble.py  xgboost_scorer.py
rayserve-ad-scoring/config/: serve_config.yaml
rayserve-ad-scoring/tests/: test_ensemble.py  test_main.py  test_metrics.py  test_scorer.py
scripts/: startup.sh
